--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -47,6 +47,11 @@
   "sendReceive.FEE": "FEE",
   "sendReceive.CopyToFeild": "Copy To Field",
   "sendReceive.ClickToEdit": "Click To Edit",
+  "sendReceive.SelectAnAccount": "Select An Account",
+  "sendReceive.FromAccount": "From Account",
+  "sendReceive.ToAccount": "ToAccount",
+  "sendReceive.MoveNXS": "Move NXS",
+  "sendReceive.MoveNxsBetweenAccount": "MOVE NXS BETWEEN ACCOUNTS",
 
   "transactions.MoreDetails": "More Details",
   "transactions.Details": "Transaction Details",
@@ -219,7 +224,6 @@
   "Settings.EnableMining": "Enable Mining",
   "Settings.EnableStaking": "Enable Staking",
   "Settings.VerboseLevel": "Verbose Level",
-  "Settings.Forkblock": "ForkBlocks",
   "Settings.SaveSettings": "Save Settings",
   "Settings.ManualDaemonMode": "Manual Daemon Mode",
   "Settings.DDN": "Data Directory Name",
@@ -233,6 +237,8 @@
   "Settings.LockWallet": "Lock Wallet",
   "Settings.ViewPrivateKeyForAddress": "View private key for address",
   "Settings.EncryptRestart": "Encrypt and Restart",
+  "Settings.MinimumConfirmations": "Minimum Confirmations",
+  "Settings.Forkblock": "ForkBlocks",
 
   "Console.CoreOutput": "Core Output",
   "Console.Console": "Console",
@@ -303,7 +309,7 @@
   "ToolTip.EnableMining": "Enable/Disable mining to the wallet",
   "ToolTip.EnableStaking": "Enable/Disable staking on the wallet",
   "ToolTip.Verbose": "Verbose level for logs",
-  "ToolTip.ForkBlocks": "Step Back A Amount of Blocks",
+  "ToolTip.ForkBlock": "Step Back A Amount of Blocks",
   "ToolTip.MDM": "Enable manual daemon mode if you are running the daemon manually outside of the wallet",
   "ToolTip.UserName": "Username configured for manual daemon",
 
@@ -325,7 +331,7 @@
   "ToolTip.RecentDatabaseDownloading": "Recent Database Downloading",
   "ToolTip.PleaseWait": "Please Wait...",
   "ToolTip.RecentDatabaseExtracting": "Recent Database Extracting",
-
+  "ToolTip.MinimumConfirmations": "Blank",
   "Alert.Received": "Transaction Received",
   "Alert.Sent": "Transaction Sent",
   "Alert.Genesis": "Genesis Transaction",
@@ -353,7 +359,11 @@
   "Alert.CoreSettingsSaved": "Core Settings Saved",
   "Alert.ContactsExported": "Contacts Exported",
   "Alert.DaemonLoadingWait": "Loading Daemon, Please Wait",
+
   "Alert.CoreRestarting": "Core Restarting",
+  "Alert.AccountsAreTheSame": "Accounts are the same",
+  "Alert.NoSecondAccountChosen": "No second account chosen",
+  "Alert.InsufficientFunds": "Insufficient funds",
 
   "Cp.AC1": "Accent Color 1",
   "Cp.AC2": "Accent Color 2",
