--- a/app/languages/fr.json
+++ b/app/languages/fr.json
@@ -47,6 +47,11 @@
   "sendReceive.FEE": "FRAIS",
   "sendReceive.CopyToFeild": "Copier dans le champ",
   "sendReceive.ClickToEdit": "Cliquez pour éditer",
+  "sendReceive.SelectAnAccount": "Sélectionnez un compte",
+  "sendReceive.FromAccount": "Du compte",
+  "sendReceive.ToAccount": "Estimer",
+  "sendReceive.MoveNXS": "DÉPLACEZ NXS",
+  "sendReceive.MoveNxsBetweenAccount": "DÉPLACER NXS ENTRE COMPTES",
 
   "transactions.MoreDetails": "Plus de détails",
   "transactions.Details": "Détails de la transaction",
@@ -231,6 +236,8 @@
   "Settings.LockWallet": "Verrouiller le portefeuille",
   "Settings.ViewPrivateKeyForAddress": "Afficher la clé privée pour l'adresse",
   "Settings.EncryptRestart": "Crypter et redémarrer",
+  "Settings.MinimumConfirmations": "Confirmations minimales",
+  "Settings.Forkblock": "Blocs de fourche",
 
   "Console.CoreOutput": "Sortie de base",
   "Console.Console": "Console",
@@ -321,6 +328,8 @@
   "ToolTip.RecentDatabaseDownloading": "Téléchargement de la base de données récente",
   "ToolTip.PleaseWait": "S'il vous plaît, attendez...",
   "ToolTip.RecentDatabaseExtracting": "Extraction récente de bases de données",
+  "ToolTip.MinimumConfirmations": "Blank",
+  "ToolTip.ForkBlock": "Reculer d'une quantité de blocs",
 
   "Alert.Received": "Transaction reçue",
   "Alert.Sent": "Transaction envoyée",
@@ -349,6 +358,10 @@
   "Alert.ContactsExported": "Contacts exportés",
   "Alert.DaemonLoadingWait": "Chargement du démon, veuillez patienter",
   "Alert.InvalidAmount": "Montant invalide",
+  "Alert.CoreRestarting": "Redémarrage du noyau",
+  "Alert.AccountsAreTheSame": "Les comptes sont les mêmes",
+  "Alert.NoSecondAccountChosen": "Aucun second compte sélectionné",
+  "Alert.InsufficientFunds": "Fonds insuffisants",
 
   "Cp.AC1": "Couleur d'accent 1",
   "Cp.AC2": "Couleur d'accent 2",
