cool couple of fixes
Former-commit-id: 7d0bd915ebaa2477fbedf814664ff756fa855776

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -330,7 +330,7 @@
   "Alert.Sent": "Transaction Sent",
   "Alert.Genesis": "Genesis Transaction",
   "Alert.TrustTransaction": "Trust Transaction",
-  "Alert.regiesteredToThis": "This is an address regiestered to this wallet",
+  "Alert.registeredToThis": "This is an address registered to this wallet",
   "Alert.InvalidAddress": "Invalid Address",
   "Alert.InvalidAmount": "Invalid Amount",
   "Alert.Invalid": "Invalid",
