tweaked synchronization status
Former-commit-id: ec5628b27d0950d69975026232bec82cec70cf0e

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -287,8 +287,8 @@
   "Header.WalletLocked": "Wallet Locked",
   "Header.UnlockedUntil": "Unlocked until",
   "Header.StakingOnly": "Staking Only",
-  "Header.Synched": "Synched",
-  "Header.Synching": "Syncing...\nBehind\n",
+  "Header.Synched": "Synchronized",
+  "Header.Synching": "Synchronizing...\nBehind\n",
   "Header.Blocks": "Blocks",
   "Header.DaemonNotLoaded": "Daemon Not Loaded",
 
