TBR - 67 added seprate stake ballence on overview
Former-commit-id: 643638d5a3c0867118f1b4a77826bf23b4b4e8b6

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -14,7 +14,7 @@
   "overview.24hrChange": "24hr Change",
   "overview.Connections": "Connections",
   "overview.BlockCount": "Block Count",
-  "overview.InterestRate": "Interest Rate",
+  "overview.InterestRate": "Stake Reward",
   "overview.StakeWeight": "Stake Weight",
   "overview.Globe": "Globe includes GeoLite2",
 
@@ -250,7 +250,7 @@
 
   "TrustList.TrustList": "Trust List",
   "TrustList.Address": "Address",
-  "TrustList.InterestRate": "Interest Rate",
+  "TrustList.InterestRate": "Stake Reward",
   "TrustList.SyncMsg": "Please let your wallet sync with the network",
 
   "Exchange.Exchange": "Exchange",
@@ -287,7 +287,7 @@
   "Footer.List": "List",
 
   "Header.StakeWeight": "Stake Weight",
-  "Header.InterestRate": "Interest Rate",
+  "Header.InterestRate": "Stake Reward",
   "Header.BlockWeight": "Block Weight",
   "Header.TrustWeight": "Trust Weight",
   "Header.WalletUnencrypted": "Wallet Unencrypted",
