cool manual daemon mode
Former-commit-id: 48b65cb2ab29cc5c61b5240dfbbfa810f52b8191

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -181,7 +181,9 @@
   "Settings.BackupWallet": "Backup Wallet",
   "Settings.StartUp": "Start at system startup",
   "Settings.ChangesNexTime": "Changes to core settings will take effect the next time the core is restarted",
-
+  "Settings.ManualDaemonEntry": "Enter manual daemon mode?",
+  "Settings.ManualDaemonExit": "Exit manual daemon mode?",
+  "Settisgs.ManualDaemonWarning": "(This will shut down your daemon)",
   "Settings.Username": "Username",
 
   "Settings.IpAddress": "Ip Address",
