cool got a couple small tweaks in
Former-commit-id: cff8700b92bbc8480c636e8c21c943bcf396e079

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -240,6 +240,8 @@
   "Settings.EncryptRestart": "Encrypt and Restart",
   "Settings.MinimumConfirmations": "Minimum Confirmations",
   "Settings.Forkblock": "ForkBlocks",
+  "Settings.Folder": "Backup Directory",
+  "Settings.chooseFolder": "Choose Directory",
 
   "Console.CoreOutput": "Core Output",
   "Console.Console": "Console",
