DevMode ToolTip, Red Errors Synced Spelling, NXS Summary moved
Former-commit-id: 4a88cd3125f6ba9fb9da7a0eb812bddcb4837a8f

--- a/app/languages/de.json
+++ b/app/languages/de.json
@@ -300,7 +300,7 @@
   "Header.WalletLocked": "Brieftasche gesperrt",
   "Header.UnlockedUntil": "Freigeschaltet bis",
   "Header.StakingOnly": "Nur abstecken",
-  "Header.Synched": "Synchronisiert",
+  "Header.Synced": "Synchronisiert",
   "Header.Synching": "Synchronisierung...\nHinter\n",
   "Header.Blocks": "Blöcke",
   "Header.DaemonNotLoaded": "Daemon nicht geladen",
