--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -298,7 +298,7 @@
   "Header.WalletLocked": "Wallet Locked",
   "Header.UnlockedUntil": "Unlocked until",
   "Header.StakingOnly": "Staking Only",
-  "Header.Synched": "Synched",
+  "Header.Synced": "Synced",
   "Header.Synching": "Syncing...\nBehind\n",
   "Header.Blocks": "Blocks",
   "Header.DaemonNotLoaded": "Daemon Not Loaded",
