--- a/app/languages/es.json
+++ b/app/languages/es.json
@@ -291,7 +291,7 @@
   "Header.WalletLocked": "Billetera bloqueada",
   "Header.UnlockedUntil": "Desbloqueado hasta",
   "Header.StakingOnly": "Solo en juego",
-  "Header.Synched": "Sincronizado",
+  "Header.Synced": "Sincronizado",
   "Header.Synching": "Sincronizando ...\nDetrás\n",
   "Header.Blocks": "Bloques",
   "Header.DaemonNotLoaded": "Daemon no cargado",
