--- a/app/languages/ru.json
+++ b/app/languages/ru.json
@@ -294,7 +294,7 @@
   "Header.WalletLocked": "Кошелек заблокирован",
   "Header.UnlockedUntil": "Разблокировано до",
   "Header.StakingOnly": "Только для ставок",
-  "Header.Synched": "синхронизируется",
+  "Header.Synced": "синхронизируется",
   "Header.Synching": "Синхронизации...\nЗа\n",
   "Header.Blocks": "Блоки",
   "Header.DaemonNotLoaded": "Демон не загружен",
