--- a/app/languages/ja.json
+++ b/app/languages/ja.json
@@ -239,6 +239,10 @@
   "Settings.EncryptRestart": "暗号化と再起動",
   "Settings.MinimumConfirmations": "最低限の確認",
   "Settings.Forkblock": "フォークブロック",
+  "Settings.ManualDaemonEntry": "手動デーモンモードに入る？",
+  "Settings.ManualDaemonExit": "マニュアルデーモンモードを終了しますか？",
+  "Settisgs.ManualDaemonWarning": "（これはデーモンをシャットダウンします）",
+  "Settings.Folder": "バックアップディレクトリ",
 
   "Console.CoreOutput": "コア出力",
   "Console.Console": "コンソール",
