--- a/app/languages/ko.json
+++ b/app/languages/ko.json
@@ -237,6 +237,10 @@
   "Settings.EncryptRestart": "암호화 및 재시작",
   "Settings.MinimumConfirmations": "최소 확인",
   "Settings.Forkblock": "포크 블록",
+  "Settings.ManualDaemonEntry": "수동 데몬 모드로 전환 하시겠습니까?",
+  "Settings.ManualDaemonExit": "수동 데몬 모드를 종료 하시겠습니까?",
+  "Settisgs.ManualDaemonWarning": "(이것으로 데몬이 종료됩니다)",
+  "Settings.Folder": "백업 디렉토리",
 
   "Console.CoreOutput": "코어 출력",
   "Console.Console": "콘솔",
