move NXS between account button & refined some other styles
Former-commit-id: 82c64f7684568b71b03c75501f93d8bf1295dcbf

--- a/app/languages/de.json
+++ b/app/languages/de.json
@@ -52,7 +52,7 @@
   "sendReceive.FromAccount": "Vom Konto",
   "sendReceive.ToAccount": "Zum Konto",
   "sendReceive.MoveNXS": "Bewegung NXS",
-  "sendReceive.MoveNxsBetweenAccount": "BEWEGEN SIE NXS ZWISCHEN KONTEN",
+  "sendReceive.MoveNxsBetweenAccount": "Bewegen sie NXS zwischen konten",
 
   "transactions.MoreDetails": "Mehr Nähere",
   "transactions.Details": "Nähere",
