--- a/app/languages/fr.json
+++ b/app/languages/fr.json
@@ -51,7 +51,7 @@
   "sendReceive.FromAccount": "Du compte",
   "sendReceive.ToAccount": "Estimer",
   "sendReceive.MoveNXS": "DÉPLACEZ NXS",
-  "sendReceive.MoveNxsBetweenAccount": "DÉPLACER NXS ENTRE COMPTES",
+  "sendReceive.MoveNxsBetweenAccount": "Déplacer NXS entre comptes",
 
   "transactions.MoreDetails": "Plus de détails",
   "transactions.Details": "Détails de la transaction",
