improvements for Transactions filters
Former-commit-id: 62b2f96e742ae6fcc41080c91cf5f50aba1bd558

--- a/app/languages/de.json
+++ b/app/languages/de.json
@@ -62,7 +62,7 @@
   "transactions.blocknumber": "Blocknummer",
   "transactions.Transactions": "Transaktionen",
   "transactions.SearchAddress": "Adresse suchen",
-  "transactions.Type": "ART",
+  "transactions.Type": "Art",
   "transactions.All": "Alles",
   "transactions.Receive": "Erhalten",
   "transactions.Sent": "Geschickt",
@@ -79,7 +79,7 @@
   "transactions.Amount": "MENGE",
   "transactions.Account": "KONTO",
   "transactions.Address": "ADRESSE",
-  "transactions.Time": "ZEITSPANNE",
+  "transactions.Time": "Zeitspanne",
   "transactions.Previous": "Bisherige",
   "transactions.Next": "Nächster",
   "transactions.MyAccount": "Mein Konto",
