--- a/app/languages/es.json
+++ b/app/languages/es.json
@@ -57,7 +57,7 @@
   "transactions.MoreDetails": "Más detalles",
   "transactions.Transactions": "Actas",
   "transactions.SearchAddress": "Dirección de búsqueda",
-  "transactions.Type": "TIPO",
+  "transactions.Type": "Tipo",
   "transactions.All": "Todos",
   "transactions.Receive": "Recibir",
   "transactions.Sent": "Expedido",
@@ -74,7 +74,7 @@
   "transactions.Amount": "CANTIDAD",
   "transactions.Account": "CUENTA",
   "transactions.Address": "DIRECCIÓN",
-  "transactions.Time": "LAPSO",
+  "transactions.Time": "Lapso",
   "transactions.Previous": "Anterior",
   "transactions.Next": "Siguiente",
   "transactions.MyAccount": "Mi cuenta",
