--- a/app/languages/fr.json
+++ b/app/languages/fr.json
@@ -61,7 +61,7 @@
   "transactions.blocknumber": "Numéro de bloc",
   "transactions.Transactions": "Transactions",
   "transactions.SearchAddress": "Adresse de recherche",
-  "transactions.Type": "TYPE",
+  "transactions.Type": "Type",
   "transactions.All": "Tout",
   "transactions.Receive": "Recevoir",
   "transactions.Sent": "Envoyé",
