--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -61,7 +61,7 @@
   "transactions.blocknumber": "Block Number",
   "transactions.Transactions": "Transactions",
   "transactions.SearchAddress": "Search Address",
-  "transactions.Type": "TYPE",
+  "transactions.Type": "Type",
   "transactions.All": "All",
   "transactions.Receive": "Receive",
   "transactions.Sent": "Sent",
@@ -78,7 +78,7 @@
   "transactions.Amount": "AMOUNT",
   "transactions.Account": "ACCOUNT",
   "transactions.Address": "ADDRESS",
-  "transactions.Time": "TIME SPAN",
+  "transactions.Time": "Time span",
   "transactions.Previous": "Previous",
   "transactions.Next": "Next",
   "transactions.MyAccount": "My Account",
