Settings fields UI overhaul
Former-commit-id: 4bbc56a7575dff216fbf7f03f5e3f9027624a1d0

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -336,7 +336,7 @@
   "ToolTip.RecentDatabaseDownloading": "Recent Database Downloading",
   "ToolTip.PleaseWait": "Please Wait...",
   "ToolTip.RecentDatabaseExtracting": "Recent Database Extracting",
-  "ToolTip.MinimumConfirmations": "Blank",
+  "ToolTip.MinimumConfirmations": "Minimum amount of confirmations before a block is accepted. Local Only.",
   "Alert.Received": "Transaction Received",
   "Alert.Sent": "Transaction Sent",
   "Alert.Genesis": "Genesis Transaction",
