minor bug fixes
Former-commit-id: af7c2b3f0b7732f3d514ab5b10f9ac377f6509dc

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -186,7 +186,7 @@
   "Settisgs.ManualDaemonWarning": "(This will shut down your daemon)",
   "Settings.Username": "Username",
 
-  "Settings.IpAddress": "Ip Address",
+  "Settings.IpAddress": "IP Address",
   "Settings.Port": "Port",
   "Settings.UPnp": "Map port using UPnP",
   "Settings.Socks4proxy": "Connect through SOCKS4 proxy",
