refined Modal & MoveBetweenAccountsModal
Former-commit-id: 73aaa5f0c4424a90e093b8e20dcb92f217b2fe3d

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -44,7 +44,7 @@
   "sendReceive.No": "No",
   "sendReceive.Total": "TOTAL",
   "sendReceive.From": "FROM",
-  "sendReceive.FEE": "FEE",
+  "sendReceive.FEE": "Fee",
   "sendReceive.CopyToFeild": "Copy To Field",
   "sendReceive.ClickToEdit": "Click To Edit",
   "sendReceive.SelectAnAccount": "Select An Account",
