+ Sign For 24hr Change, Adressbook String
Former-commit-id: 07e0d2d94c536d31b39171f83f05ffc6ed9feb1d

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -152,7 +152,7 @@
   "AddressBook.Create": "Create",
   "AddressBook.NameOption": "Name (Optional)",
   "AddressBook.AddAddressTO": "Add Address To",
-  "AddressBook.Copy": "Click To Copy",
+  "AddressBook.Copy": "Click Address To Copy",
   "AddressBook.Back": "Back",
   "AddressBook.TheirAddresses": "Their Addresses",
   "AddressBook.Address": "Address",
