--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -183,7 +183,7 @@
   "Settings.ChangesNexTime": "Changes to core settings will take effect the next time the core is restarted",
   "Settings.ManualDaemonEntry": "Enter manual daemon mode?",
   "Settings.ManualDaemonExit": "Exit manual daemon mode?",
-  "Settisgs.ManualDaemonWarning": "(This will shut down your daemon)",
+  "Settings.ManualDaemonWarning": "(This will shut down your daemon)",
   "Settings.Username": "Username",
 
   "Settings.IpAddress": "IP Address",
@@ -327,7 +327,7 @@
   "ToolTip.PortOfSOCKS4proxyServer": "Port of SOCKS4 proxy server",
   "ToolTip.Detach": "Detach the database when shutting down the wallet",
   "ToolTip.RenderGlobe": "Render the globe on the Overview page",
-  "Tooltip.RenderGlobeOpenGLFail": "Your computer does not support OPENGL 2.0",
+  "ToolTip.RenderGlobeOpenGLFail": "Your computer does not support OPENGL 2.0",
   "ToolTip.TryAgain": "Try Again?",
   "ToolTip.DbOption": "Would you like to reduce the time it takes to sync by downloading a recent version of the database?",
   "ToolTip.NotEnoughSpace": "Not Enough Space, Requires 20gb.",
@@ -369,6 +369,7 @@
   "Alert.AccountsAreTheSame": "Accounts are the same",
   "Alert.NoSecondAccountChosen": "No second account chosen",
   "Alert.InsufficientFunds": "Insufficient funds",
+  "Alert.ManualDaemonDown": "Manual Daemon Is Down",
 
   "Cp.AC1": "Accent Color 1",
   "Cp.AC2": "Accent Color 2",
