cleaned up Header
Former-commit-id: 362c475e3b2d82d2906efe3b1000f7ab91ddcdd9

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -298,7 +298,7 @@
   "Header.UnlockedUntil": "Unlocked until",
   "Header.StakingOnly": "Staking Only",
   "Header.Synced": "Synchronized",
-  "Header.Synching": "Synchronizing...\nBehind\n",
+  "Header.Syncing": "Synchronizing...\n{blocks} blocks behind",
   "Header.Blocks": "Blocks",
   "Header.DaemonNotLoaded": "Daemon Not Loaded",
 
