Revamp Security Settings & form system with redux-form
Former-commit-id: 72a440f6e7ecc9a4edfac69068cd7257682b1ab8

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -355,7 +355,7 @@
   "Alert.WalletLocked": "Wallet Locked",
   "Alert.WalletBackedUp": "Wallet Backed Up",
   "Alert.InvalidTransactionFee": "Invalid Transaction Fee",
-  "Alert.Copied": "Copied",
+  "Alert.Copied": "Copied to clipboard",
   "Alert.StyleSettingsSaved": "Style Settings Saved",
   "Alert.NoAmmountSet": "No Amount Set",
   "Alert.PleaseFillOutField": "Please Fill Out Field",
