Market Data Adjustments
Former-commit-id: 2a4a534d71fe89e0524c2b675598d3dbe58db7f8

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -95,6 +95,7 @@
 
   "Market.Information": "Market Information",
   "Market.Refreash": "Refresh Market Data",
+  "Market.Refreshing": "Refreshing Market Data...",
   "transactions.PENDINGTR": "PENDING TRANSACTION",
   "Market.All": "All",
   "Market.Receive": "Receive",
