Added Synch Message for trust list lag
Former-commit-id: 0617c4e63080e7bd97235e370d691aea260b5032

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -255,7 +255,7 @@
   "TrustList.TrustList": "Trust List",
   "TrustList.Address": "Address",
   "TrustList.InterestRate": "Stake Reward",
-  "TrustList.SyncMsg": "Please let your wallet sync with the network",
+  "TrustList.SyncMsg": "Synching Please Wait",
 
   "Exchange.Exchange": "Exchange",
   "Exchange.ShoutOut": "powered by ShapeShift",
