Themes are now seperated. You can now file pick a theme.
Former-commit-id: 85c7b728413df373ad5e2322bb5e8ddc82a0fab5

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -243,6 +243,7 @@
   "Settings.MinimumConfirmations": "Minimum Confirmations",
   "Settings.Forkblock": "ForkBlocks",
   "Settings.Folder": "Backup Directory",
+  "Settings.PickThemeFile": "Select Theme File",
 
   "Console.CoreOutput": "Core Output",
   "Console.Console": "Console",
@@ -388,6 +389,10 @@
   "Cp.GC": "Globe Color",
   "Cp.GPC": "Globe Pillar Color",
   "Cp.GAC": "Globe Arch Color",
+  "Cp.PC": "Primary Color",
+  "Cp.PCA": "Primary Color Accent",
+  "Cp.ER": "Error Color",
+  "Cp.ERA": "Error Color Accent",
 
   "Lang.English": "English",
   "Lang.Russian": "Russian",
