revamped the theme system & uses a separate theme.json file
Former-commit-id: 8cb0c5e4a77fa521c3354304867419cd5be91033

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -249,7 +249,7 @@
   "Settings.MinimumConfirmations": "Minimum Confirmations",
   "Settings.Forkblock": "ForkBlocks",
   "Settings.Folder": "Select Default Backup Directory",
-  "Settings.PickThemeFile": "Select Theme File",
+  "Settings.PickThemeFile": "Import Custom Theme",
 
   "Console.CoreOutput": "Core Output",
   "Console.Console": "Console",
@@ -385,8 +385,8 @@
   "Cp.AC2": "Accent Color 2",
   "Cp.THC": "Table Header Color",
   "Cp.TTC": "Tooltip Color",
-  "Cp.TC": "Text Color",
-  "Cp.PBC": "Panel Background Color",
+  "Cp.TC": "Foreground Color",
+  "Cp.PBC": "Background Color",
   "Cp.NLC": "Nexus Logo Color",
   "Cp.SIC": "Status Icon Color",
   "Cp.FBC": "Footer Base Color",
@@ -397,8 +397,8 @@
   "Cp.GAC": "Globe Arch Color",
   "Cp.PC": "Primary Color",
   "Cp.PCA": "Primary Color Accent",
-  "Cp.ER": "Error Color",
-  "Cp.ERA": "Error Color Accent",
+  "Cp.ER": "Danger Color",
+  "Cp.ERA": "Danger Color Accent",
 
   "Lang.English": "English",
   "Lang.Russian": "Russian",
