improved signin status icon
Former-commit-id: b294b5f8135c717e1f972f47bcb875e6e99421f3

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -303,9 +303,9 @@
   "Header.BlockWeight": "Block Weight",
   "Header.TrustWeight": "Trust Weight",
   "Header.WalletUnencrypted": "Wallet Unencrypted",
-  "Header.WalletLocked": "Wallet Locked",
-  "Header.UnlockedUntil": "Unlocked until",
-  "Header.StakingOnly": "Staking Only",
+  "Header.WalletLocked": "Not logged in",
+  "Header.UnlockedUntil": "Logged in until {unlockDate}",
+  "Header.StakingOnly": "for staking only",
   "Header.Synced": "Synchronized",
   "Header.Syncing": "Synchronizing...\n{blocks} blocks behind",
   "Header.Blocks": "Blocks",
