confirmation & some more validations in MoveBetweenAccountsModal
Former-commit-id: f43bf5e0550fae00d5d4159e88919582413a4564

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -50,7 +50,7 @@
   "sendReceive.SelectAnAccount": "Select An Account",
   "sendReceive.FromAccount": "From Account",
   "sendReceive.ToAccount": "ToAccount",
-  "sendReceive.MoveNXS": "Move NXS",
+  "sendReceive.MoveNXS": "Move NXS?",
   "sendReceive.MoveNxsBetweenAccount": "Move NXS between accounts",
   "sendReceive.Contacts": "Contacts",
 
