collected translation strings in SendPage
Former-commit-id: 34146825e19189c363c540f254968061fb53a87a

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -19,12 +19,17 @@
   "overview.Globe": "Globe includes GeoLite2",
 
   "sendReceive.SendNexus": "Send NXS",
+  "sendReceive.SendFrom": "Send From",
+  "sendReceive.SendTo": "Send To",
+  "sendReceive.RecipientAddress": "Recipient Address",
   "sendReceive.Address": "NXS Address",
   "sendReceive.Amount": "NXS Amount",
   "sendReceive.TableAddress": "Address",
   "sendReceive.TableAmount": "Amount",
   "sendReceive.Message": "Message",
   "sendReceive.Remove": "Remove",
+  "sendReceive.AddRecipient": "Add recipient",
+  "sendReceive.RemoveRecipient": "Remove recipient",
   "sendReceive.Queue": "Queue",
   "sendReceive.ClearQueue": "Clear Queue",
   "sendReceive.SendAll": "Send All",
@@ -53,6 +58,16 @@
   "sendReceive.MoveNXS": "Move NXS?",
   "sendReceive.MoveNxsBetweenAccount": "Move NXS between accounts",
   "sendReceive.Contacts": "Contacts",
+  "sendReceive.MultipleRecipients": "Send to Multiple Recipients",
+  "sendReceive.Messages.NoAccounts": "No accounts selected",
+  "sendReceive.Messages.NoRecipient": "There must be at least one recipient",
+  "sendReceive.Messages.SameAccount": "Cannot move to the same account",
+  "sendReceive.Messages.ErrorMoving": "Error Moving NXS",
+  "sendReceive.Messages.ErrorSending": "Error Sending NXS",
+  "sendReceive.Messages.NotLoggedIn": "You are not logged in",
+  "sendReceive.Messages.NotLoggedInNote": "You need to log in to your wallet before sending transactions",
+  "sendReceive.Messages.LogInNow": "Log in now",
+  "sendReceive.Messages.Success": "NXS moved successfully",
 
   "transactions.MoreDetails": "More Details",
   "transactions.Details": "Transaction Details",
