collected translation strings in Settings App & Core
Former-commit-id: 17342a79992ca685f32266e89838010e09cb49ee

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -204,6 +204,42 @@
   "Settings.ManualDaemonExit": "Exit manual daemon mode?",
   "Settings.ManualDaemonWarning": "(This will shut down your daemon)",
   "Settings.Username": "Username",
+  "Settings.AutoUpdate": "Auto Update (Recommended)",
+  "Settings.AutoUpdateNote": "Automatically check for new versions and notify if a new version is available",
+  "Settings.DisableAutoUpdate": "Are you sure you want to disable Auto Update?",
+  "Settings.DisableAutoUpdateNote": "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience",
+  "Settings.KeepAutoUpdate": "Keep Auto Update On",
+  "Settings.TurnOffAutoUpdate": "Turn Auto Update Off",
+  "Settings.DaemonLoading": "Please wait for the daemon to load",
+  "Settings.SettingsSaved": "Settings Saved",
+  "Settings.SavingSettings": "Saving Settings...",
+  "Settings.SaveSettings": "Save Settings",
+  "Settings.RestartingDaemon": "Restarting daemon...",
+  "Settings.PrivKeyImported": "Private key imported. Rescanning now",
+  "Settings.Rescanning": "Rescanning...",
+  "Settings.RescanningDone": "Rescanning done",
+  "Settings.Import": "Import",
+
+  "Settings.Errors.ManualDaemonUser": "Manual daemon Username is required",
+  "Settings.Errors.ManualDaemonPassword": "Manual daemon Password is required",
+  "Settings.Errors.ManualDaemonIP": "Manual daemon IP is required",
+  "Settings.Errors.ManualDaemonPort": "Manual daemon Port is required",
+  "Settings.Errors.ManualDaemonDataDir": "Data directory is required",
+  "Settings.Errors.Socks4PoxyIP": "SOCKS4 proxy IP is required",
+  "Settings.Errors.Socks4PoxyPort": "SOCKS4 proxy Port is required",
+  "Settings.Errors.SettingTxFee": "Error setting Transaction Fee",
+  "Settings.Errors.LoggingOut": "Error logging out",
+  "Settings.Errors.ChangingPassword": "Error changing password",
+  "Settings.Errors.PasswordRequired": "Password is required",
+  "Settings.Errors.PasswordInvalidChars": "Password cannot contain these characters: - $ / & * | < >",
+  "Settings.Errors.PasswordMinLength": "Password must be at least 8 characters",
+  "Settings.Errors.PasswordsNoMatch": "Passwords do not match",
+  "Settings.Errors.PasswordSpaces": "Password cannot start or end with spaces",
+  "Settings.Errors.EncryptingWallet": "Error encrypting wallet",
+  "Settings.Errors.AccountName": "Account name is required",
+  "Settings.Errors.PrivateKey": "Private key is required",
+  "Settings.Errors.Rescanning": "Error rescanning",
+  "Settings.Errors.ImportingPrivKey": "Error importing private key",
 
   "Settings.IpAddress": "IP Address",
   "Settings.Port": "Port",
@@ -229,6 +265,8 @@
   "Settings.Re-Enter": "Re-Enter Password",
   "Settings.ConfirmPassword": "Confirm Password",
   "Settings.PasswordsMatch": "Passwords do not match",
+  "Settings.LogOut": "Log Out",
+  "Settings.ConfirmLogOut": "Are you sure you want to log out?",
 
   "Settings.KeyDisplayHere": "Private key will be displayed here",
   "Settings.ViewPrivateKey": "View Private Key",
@@ -248,7 +286,6 @@
   "Settings.EnableMining": "Enable Mining",
   "Settings.EnableStaking": "Enable Staking",
   "Settings.VerboseLevel": "Verbose Level",
-  "Settings.SaveSettings": "Save Settings",
   "Settings.ManualDaemonMode": "Manual Daemon Mode",
   "Settings.DDN": "Data Directory Name",
   "Settings.ChangePassword": "Change Password",
@@ -263,7 +300,8 @@
   "Settings.EncryptRestart": "Encrypt and Restart",
   "Settings.MinimumConfirmations": "Minimum Confirmations",
   "Settings.Forkblock": "ForkBlocks",
-  "Settings.Folder": "Select Default Backup Directory",
+  "Settings.BackupDir": "Backup Directory",
+  "Settings.SelectBackupDirectory": "Select Backup Directory",
   "Settings.PickThemeFile": "Import Custom Theme",
 
   "Console.CoreOutput": "Core Output",
@@ -421,5 +459,7 @@
   "Lang.Korean": "Korean",
   "Lang.German": "German",
   "Lang.Japanese": "Japanese",
-  "Lang.French": "French"
+  "Lang.French": "French",
+
+  "Common.UnknownError": "An unknown error occurred"
 }
